Fix nav wrapping on iPhone viewport

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -549,6 +549,14 @@ button.secondary {
   }
 }
 
+@media (max-width: 667px) {
+  .header {
+    &__brand {
+      margin-right: 20px;
+    }
+  }
+}
+
 .timeline {
   padding: 20px;
   padding-bottom: 0;
